--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,8 @@ dependencies = [
     "psycopg2-binary>=2.9.10",
     "whitenoise[brotli]>=6.9.0",
 ]
+
+[tool.uv.workspace]
+members = [
+    "parroquiaproject",
+]
