--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "dj-database-url>=3.0.1",
     "django>=5.2.5",
+    "django-widget-tweaks>=1.5.0",
     "gunicorn>=23.0.0",
     "pillow>=11.3.0",
     "psycopg2-binary>=2.9.10",
